# AgentPro_saadlahori_final

./: Multan_weather_map.html  Murree_weather_map.html  README.md  TextImage_Gradio.py  Untitled-1.ipynb  app_final_saadlahori.py  app_layout.py  main.py
agentpro/: __init__.py
cookbook/: custool_tool.ipynb  (+1 more)
cookbook/Traversaal x Optimized AI Hackathon 2025/silverline/backend/: .env.example  .gitignore  config.py  dockerfile  main.py  pyproject.toml
cookbook/Traversaal x Optimized AI Hackathon 2025/silverline/backend/app/: server.py
cookbook/Traversaal x Optimized AI Hackathon 2025/silverline/backend/app/db/: prisma_client.py
cookbook/Traversaal x Optimized AI Hackathon 2025/silverline/backend/app/middleware/: middleware_handler.py  usage.py
cookbook/Traversaal x Optimized AI Hackathon 2025/silverline/backend/app/routes/: routes.py
cookbook/Traversaal x Optimized AI Hackathon 2025/silverline/backend/app/routes/call_agent/: apis.py  backend_mock_apis.py  dtos.py  helper.py  prompts.py
cookbook/Traversaal x Optimized AI Hackathon 2025/silverline/backend/app/routes/dashboard/: apis.py  dtos.py  helper.py
cookbook/Traversaal x Optimized AI Hackathon 2025/silverline/backend/app/routes/log_viewer/: log_viewer.py  log_viewer_service.py
cookbook/Traversaal x Optimized AI Hackathon 2025/silverline/backend/app/test/: insert_dummy_values.py
cookbook/Traversaal x Optimized AI Hackathon 2025/silverline/backend/prisma/: schema.prisma
cookbook/Traversaal x Optimized AI Hackathon 2025/silverline/backend/scripts/: generate_prisma.py  seed_database.py
(+169 files in other folders)
